--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "text-generator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/text-generator",
+  "homepage": "/bacon-ipsum-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
